--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fr05t1k/esia",
+  "name": "sbwerewolf/esia-connector",
   "license": "MIT",
   "description": "OpenID ESIA authenticating",
   "keywords": [
