--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     }
   },
   "require": {
-    "php": "8.0",
+    "php": ">=8.0",
     "guzzlehttp/guzzle": "^6.1.0|^7.0",
     "psr/log": "^1.0",
     "psr/http-message": "^1.0",
