--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
   "name": "sbwerewolf/esia-connector",
-  "license": "MIT",
   "description": "OpenID ESIA authenticating",
+  "type": "library",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Nikolay Volkhin",
+      "email": "ulfnew@gmail.com"
+    }
+  ],
   "keywords": [
     "esia",
     "openid",
@@ -18,9 +25,9 @@
     }
   },
   "require": {
-    "php": "8.0",
+    "php": ">=8.0",
     "guzzlehttp/guzzle": "^6.1.0|^7.0",
-    "psr/log": "^1.0",
+    "psr/log": "^2.0",
     "psr/http-message": "^1.0",
     "psr/http-client": "^1.0",
     "ext-json": "*"
